# robot-infra

./: .gitignore  LICENSE  README.md  docker-compose.yaml
catheter-robot/: docker-compose.yaml
catheter-robot/firmware/teensy_tekceleo/: teensy_tekceleo.ino
catheter-robot/src/actuation/: package.xml  setup.py
catheter-robot/src/actuation/actuation/: controller_serial_com.py  manager.py
catheter-robot/src/control_interface/: CMakeLists.txt  package.xml
catheter-robot/src/control_interface/control_interface/: device_serial_com.py  manager.py
catheter-robot/src/control_interface/control_interface_py/: device_serial_com.py  manager.py
catheter-robot/src/control_interface/launch/: launch.py
catheter-robot/src/control_interface/msg/: Bytes.msg  ControlStream.msg  ControllerFeedback.msg  DeviceEvent.msg  DeviceMsg.msg  DeviceStream.msg  ManagerEvent.msg  ManagerStream.msg  TeleopIntents.msg
catheter-robot/src/control_interface/srv/: Debug.srv  DeviceCmd.srv  ManagerCmd.srv  SetControlMode.srv
catheter-robot/src/teleop/: package.xml  setup.py
catheter-robot/src/teleop/config/: params.yaml
catheter-robot/src/teleop/launch/: slicer.launch.py
catheter-robot/src/teleop/teleop/: keyboard.py  slicer.py
docker/ros2-humble-base/: Dockerfile.txt
firmware/teensy_tekceleo/: teensy_tekceleo.ino
src/automation/: package.xml  setup.py
src/automation/automation/estimation/: node.py
src/automation/automation/estimation/sensors/: em_coil_ros.py  mri_coil_ros.py
src/automation/launch/: estimator.launch.py
src/control_interface/: CMakeLists.txt
src/control_interface/control_interface_py/: device_serial_com.py  manager.py
src/control_interface/launch/: launch.py
src/control_interface/msg/: ManagerEvent.msg
src/control_interface/srv/: DeviceCmd.srv
src/teleop/: package.xml
src/teleop/config/: params.yaml
src/teleop/launch/: slicer.launch.py
