<?xml version="1.0"?>
<package format="3">
  <name>automation</name>
  <version>0.1.0</version>
  <description>High-level automation nodes: state estimation, planning, and other autonomy layers.</description>
  <maintainer email="todo@todo.com">chen-lab</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>control_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
